--- a/index.haml
+++ b/index.haml
@@ -3,6 +3,31 @@
   %meta{ charset:"utf-8" }
   %script{ src:"./main.js" }
 %p
-  %textarea#jwk{ rows:9, cols:120 }
+  My Key:
+  %br
+  %textarea#mykey{ rows:9, cols:140 }
+  %br
+  %button#create create
+%p
+  Partner's Key:
+  %br
+  %textarea#partnerskey{ rows:9, cols:140 }
+    {
+    "crv": "P-521",
+    "ext": true,
+    "key_ops": [],
+    "kty": "EC",
+    "x": "ASc-3sn4eYpHJWssA2jv_gQucYOEhD-d9phopdmhUNFvteAGSxEksfRVxVLxeI121By4O2cQlgPN3A9n4Ss8wt5Q",
+    "y": "AbuEcpfMtKUdEI3iD2qT--XVSAvmQry8NpXLLlBrFMr7sL9aq4CV6_ErjfGlClCUNJxxWZbjgbFQ1zVJNpJMYYrF"
+    }
+  %br
+  %button#import import
+%p
+  Password:
+  %input#password{ type:"text", readonly:true, value:"hoge" }
+  %br
+  Password Digest:
+  %input#digest{ type:"text", readonly:true, value:"hoge" }
+  %br
 :javascript
   main();
