パスワードの調整など

--- a/index.haml
+++ b/index.haml
@@ -24,10 +24,10 @@
   %button#import import
 %p
   Password:
-  %input#password{ type:"text", readonly:true, value:"hoge" }
+  %input#password{ type:"text", readonly:true, value:"", size:50 }
   %br
   Password Digest:
-  %input#digest{ type:"text", readonly:true, value:"hoge" }
+  %input#digest{ type:"text", readonly:true, value:"", size:50 }
   %br
 :javascript
   main();
