サンプルデータを撤去

--- a/index.haml
+++ b/index.haml
@@ -5,21 +5,13 @@
 %p
   My Key:
   %br
-  %textarea#mykey{ rows:9, cols:140 }
+  %textarea#mykey{ rows:9, cols:140, readonly:true }
   %br
   %button#create create
 %p
   Partner's Key:
   %br
   %textarea#partnerskey{ rows:9, cols:140 }
-    {
-    "crv": "P-521",
-    "ext": true,
-    "key_ops": [],
-    "kty": "EC",
-    "x": "ASc-3sn4eYpHJWssA2jv_gQucYOEhD-d9phopdmhUNFvteAGSxEksfRVxVLxeI121By4O2cQlgPN3A9n4Ss8wt5Q",
-    "y": "AbuEcpfMtKUdEI3iD2qT--XVSAvmQry8NpXLLlBrFMr7sL9aq4CV6_ErjfGlClCUNJxxWZbjgbFQ1zVJNpJMYYrF"
-    }
   %br
   %button#import import
 %p
