--- a/index.haml
+++ b/index.haml
@@ -2,24 +2,34 @@
 %head
   %meta{ charset:"utf-8" }
   %script{ src:"./main.js" }
+%h1 鍵交換支援
+%h2 自分の鍵
 %p
-  My Key:
+  この鍵をメールなどでパートナーに伝えます:
   %br
   %textarea#mykey{ rows:9, cols:140, readonly:true }
   %br
-  %button#create create
+  %button#create 自分の鍵を更新する
+%h2 パートナーの鍵
 %p
-  Partner's Key:
+  ここに、パートナーから伝えられた鍵を貼り付けます
   %br
   %textarea#partnerskey{ rows:9, cols:140 }
   %br
-  %button#import import
+  %button#import パスワードを生成する
+%h2 パスワード
 %p
-  Password:
-  %input#password{ type:"text", readonly:true, value:"", size:50 }
+  このパスワードは決してインターネットなどに流してはいけません:
   %br
-  Password Digest:
+  %input#password{ type:"text", readonly:true, value:"", size:50 }
+%h2 ダイジェスト
+%p
+  パスワード生成後、この文字列をメールなどでパートナーに伝えます:
+  %br
   %input#digest{ type:"text", readonly:true, value:"", size:50 }
   %br
+  パートナーのダイジェストと、あなたのダイジェストが一致する場合、パスワードも同じになっています。
+  %br
+  コピペミスなどがある場合、パートナーのダイジェストと、あなたのダイジェストが一致しません。
 :javascript
   main();
