ユーザーパスワードを空にする

--- a/index.haml
+++ b/index.haml
@@ -5,7 +5,7 @@
     'use strict';
 
     const jwtStorePassword = () => {
-      return "hoge";
+      return null;
     };
 
     const storageKey = () => {
