ブラウザリストを更新する

--- a/index.haml
+++ b/index.haml
@@ -44,12 +44,16 @@
 %p
   以下のブラウザで動作することを確認をしました:
 %ul
-  %li Microsoft Edge バージョン 81.0.416.64 on macOS
-  %li Google Chrome バージョン 81.0.4044.122 on macOS
   %li Firefox Browser 75.0 on macOS
+  %li Firefox Browser 75.0 on Windows
+  %li Google Chrome バージョン 81.0.4044.122 on macOS
+  %li Google Chrome バージョン 81.0.4044.122 on Windows
+  %li Microsoft Edge バージョン 81.0.416.64 on macOS
+  %li Microsoft Edge バージョン 81.0.416.64 on Windows
 %p
   以下のブラウザで動作<b>しない</b>ことを確認をしました:
 %ul
+  %li Internet Explorer 11 (バージョン 11.778.18362.0) on Windows
   %li Safari バージョン13.1 (15609.1.20.111.8) on macOS
 :javascript
   main();
